--- a/parent-app.yaml
+++ b/parent-app.yaml
@@ -13,6 +13,4 @@ spec:
     targetRevision: HEAD
     path: apps
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
